<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Food Donation</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome to</string>
    <string name="tutorial_text">Pin a marker on the map to accept a donation, or you can offer one using the menu buttons.</string>
    <string name="firebase_url">https://intense-inferno-9938.firebaseio.com/</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="action_logout">Log out</string>
    <string name="action_login">Log in</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_pane">MapPaneActivity</string>
    <string name="title_activity_donation_list">DonationListActivity</string>
    <string name="title_activity_detailed_donation">DetailedDonationActivity</string>
    <string name="donate">Donate</string>
    <string name="title_activity_create_donation">CreateDonationActivity</string>
    <string name="title_label">Offer title</string>
    <string name="description_label">Offer description</string>
    <string name="availability_time_label">When are you available?</string>
    <string name="take_picture_label">Take picture</string>
    <string name="save_label">Save</string>
    <string name="map_view">Map view</string>
    <string name="list_view">List view</string>
    <string name="new_donation">New donation</string>
    <string name="manage">Manage</string>
    <string name="connect">Connect</string>
    <string name="avail_time">"Availability time: "</string>
    <string name="marker_show_details">Show details</string>
    <string name="marker_cancel">Cancel</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marker_info_title">Food info</string>
</resources>
