<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logcats.fooddonation.CreateDonationActivity">

    <TextView
        android:id="@+id/titleLabel"
        android:text="@string/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/title"
        android:layout_below="@+id/titleLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_below="@+id/title"
        android:text="@string/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/description"
        android:layout_below="@+id/descriptionLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/availabilityLabel"
        android:text="@string/availability_time_label"
        android:layout_below="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/availabilityTime"
        android:layout_below="@+id/availabilityLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/takePictureButton"
        android:text="@string/take_picture_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/saveButton"
        android:text="@string/save_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
